--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@
     --var-intro-header-fs: 28px;
     --var-intro-text-fs: 14px;
     --var-intro-text-lh: 1.1em;
-    --var-intro-h: inherit;
 
     --var-intro-btn-h: 48px;
     --var-intro-btn-w: 138px;
@@ -84,7 +83,6 @@
         --var-intro-header-fs: 35px;
         --var-intro-text-fs: 17px;
         --var-intro-text-lh: 1.6em;
-        /* --var-intro-h: 540px; */
     
         --var-intro-btn-h: 50px;
         --var-intro-btn-w: 150px;
@@ -101,7 +99,6 @@
         --var-intro-header-fs: 35px;
         --var-intro-text-fs: 17px;
         --var-intro-text-lh: 1.6em;
-        /* --var-intro-h: 540px; */
     
         --var-intro-btn-h: 50px;
         --var-intro-btn-w: 150px;
@@ -141,18 +138,17 @@
         --var-menu-submenu-margin: 0;
         --var-menu-btn-margin: 0; */
     
-        --var-intro-header-fs: 0;
-        --var-intro-text-fs: 0;
-        --var-intro-text-lh: 0;
-        --var-intro-h: 0;
+        --var-intro-header-fs: 80px;
+        --var-intro-text-fs: 20px;
+        --var-intro-text-lh: 1.6em;
+        --var-intro-h: 72vh;
     
-        --var-intro-btn-h: 0;
-        --var-intro-btn-w: 0;
-        --var-intro-btn-fs: 0;
-        --var-intro-btn-lh: 0;
-        --var-intro-btn-pt: 0;
+        --var-intro-btn-h: 59px;
+        --var-intro-btn-w: 166px;
+        --var-intro-btn-fs: 19px;
+        --var-intro-btn-pt: 1px;
     
-        --var-intro-logos-fs: 0;
+        --var-intro-logos-fs: 0.9vw;
     }
 }
 
@@ -399,7 +395,6 @@ body {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    height: var(--var-intro-h);
 }
 
 .intro .hero-img {
@@ -411,6 +406,7 @@ body {
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
+    height: var(--var-intro-h);
 }
 
 .intro .cta > * {
@@ -423,9 +419,15 @@ body {
 }
 
 .intro .cta > .separator:nth-of-type(1) {
+    /* gap from top to button */
     flex-grow: 5;
 }
 .intro .cta > .separator:nth-of-type(4) {
+    /* gap from button to logos */
+    flex-grow: 6;
+}
+.intro .cta > .separator:nth-of-type(5) {
+    /* gap after logos */
     flex-grow: 6;
 }
 
@@ -705,25 +707,21 @@ body {
 
     /* Intro styling */
 
-    .intro .hero-img {
-        order: 2;
-        flex-shrink: 1;
-        max-height: 72vh;
-        max-width: 100%;
-        flex-basis: fit-content;
-        flex-grow: 0;
-    }
-
     .intro {
         flex-direction: row;
         margin-top: 40px;
+        height: var(--var-intro-h);
         /* TODO: make responsive, replace margins with flex where possible */
     }
 
     .intro .hero-img {
         display: flex;
         flex-direction: row;
+        order: 2;
         flex-grow: 1;
+        max-height: var(--var-intro-h);
+        max-width: 100%;
+        flex-basis: fit-content;
     }
 
     .intro .hero-img img.mobile {
@@ -743,6 +741,7 @@ body {
         flex-direction: column;
         padding-left: 10vw;
         box-sizing: border-box;
+        flex-grow: 0;
     }
 
     .intro .cta > .separator {
@@ -755,9 +754,13 @@ body {
     .intro .cta > .separator:nth-of-type(4) {
         flex-grow: 6;
     }
+    .intro .cta > .separator:last-of-type {
+        flex-grow: 0;
+    }
 
     .intro .header {
-        font-size: 84px;
+        /* font-size: 84px; */
+        font-size: var(--var-intro-header-fs);
         text-align: start;
         /* margin: 0 0 60px 0; */
         margin: 0;
@@ -765,8 +768,10 @@ body {
     }
 
     .intro .text {
-        font-size: 20px;
-        line-height: 1.6em;
+        /* font-size: 20px; */
+        /* line-height: 1.6em; */
+        font-size: var(--var-intro-text-fs);
+        line-height: var(--var-intro-text-lh);
         text-align: start;
         /* margin: 0 0 50px 0; */
         margin: 0;
@@ -785,14 +790,14 @@ body {
     .btn.border-black {}
 
     .intro .btn {
-        margin: 0 0 0 0;
-        width: 166px;
-        height: 59px;
-        font-size: 19px;
+        font-size: var(--var-intro-btn-fs);
+        width: var(--var-intro-btn-w);
+        height: var(--var-intro-btn-h);
+        margin: 0;
     }
 
     .intro .btn > p {
-        padding-bottom: 1px;
+        padding-bottom: var(--var-intro-btn-pt);
     }
 
     .navbar .btn {
@@ -809,7 +814,7 @@ body {
     .client-logos {
         margin: auto 0 0 0;
         justify-content: flex-start;
-        font-size: 0.9vw;
+        font-size: var(--var-intro-logos-fs);
     }
 
     .client-logos > .desktop-separator {
